--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -57,6 +57,9 @@ a{text-decoration: underline;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    i{
+        color: rgb(6,163,218);
+    }
 
 }
 .footer-items{
@@ -86,4 +89,27 @@ a:hover{
 .footer-heads{
     font-size: 35px;
     font-weight: 700;
+}
+.footer-col-2-contact-items{
+    display: flex;
+    gap: 7px;i{
+        color: rgb(6,163,218);
+
+    }
+}
+.footer-logo-back{
+    max-width: 70px;
+    padding:7px 10px;
+    background-color: rgb(6,163,218);
+    color: white;
+}
+.footer-logo{
+    display: flex;
+    gap: 10px;
+}
+.footer-bottom-number-head{
+    font-size: 30px;
+}
+.footer-bottom-number{
+    font-size: 22px;
 }
