--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,7 +1,9 @@
 nav{
     width: 100%;
-    background-color: red;
+  border-bottom: 1px solid rgb(117, 117, 117);
     display: flex;
+    position: absolute;
+    z-index: 1;
     justify-content: center;
     ul{
         li{
