--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,8 +1,51 @@
 .section-home-top{
-    background-image: url('https://alovservisimages.netlify.app/img/heating-central-gas-furnace-AFRW6SQ-copy%20(1).jpg');
-    background-size: cover;
-    min-height: 650px;
+    position: relative;
+    background: linear-gradient(rgba(9, 30, 62, .7), rgba(9, 30, 62, .7)), url('https://alovservisimages.netlify.app/img/heating-central-gas-furnace-AFRW6SQ-copy%20(1).jpg') center center no-repeat;
+      background-size: cover;
+    min-height: 50rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
+.section-home-top-general{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bolder;
+    flex-direction: column;
+    gap: 1.2rem;
+    max-width: 45rem;
+    width: 100%;
+}
+.kombiustasi-btn{
+    max-width: 200px;
+    width: 100%;
+}
+.bizimleelaqe-btn{
+    max-width: 200px;
+    width: 100%;
+}
+.alovservishead{
+    font-size: 1.3rem;
+    color: white;
+}
+.alovservistext{
+    font-size: 5rem;
+    color: white;
+}
+
+.section-home-top-btn{
+    max-width: 500px;
+    width: 100%;
+    display: flex;
+    gap: 1rem;
+    button{
+        padding: 1rem;
+         
+    }
+   
+} 
 .home-aboutus-img{
     max-width: 500px;
 }
