--- a/src/components/CombiBoards/index.scss
+++ b/src/components/CombiBoards/index.scss
@@ -20,3 +20,19 @@
     margin: 20px 0 0;
   }
 }
+
+.section-combibrains-img {
+  position: relative;
+  background: linear-gradient(rgba(9, 30, 62, .7), rgba(9, 30, 62, .7)), url('https://alovservisimages.netlify.app/img/kart1.jpg') center center no-repeat;
+  background-size: cover;
+  min-height: 29rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.section-combibrains-text{
+  font-size: 3.5rem;
+  font-weight: bold;
+  color: white;
+  margin-top: 90px;
+  }
