--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,14 +1,15 @@
-.section-home-top{
+.section-home-top {
     position: relative;
     background: linear-gradient(rgba(9, 30, 62, .7), rgba(9, 30, 62, .7)), url('https://alovservisimages.netlify.app/img/heating-central-gas-furnace-AFRW6SQ-copy%20(1).jpg') center center no-repeat;
-      background-size: cover;
+    background-size: cover;
     min-height: 50rem;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
-.section-home-top-general{
+
+.section-home-top-general {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,52 +19,152 @@
     max-width: 45rem;
     width: 100%;
 }
-.kombiustasi-btn{
+
+.kombiustasi-btn {
+   background-color: #06A3DA;
+
+   font-weight: 600;
+   font-size: 16px;
+   border-style: none;
     max-width: 200px;
     width: 100%;
+    a{
+color: white;
+    }
 }
-.bizimleelaqe-btn{
+
+.bizimleelaqe-btn {
+    font-weight: 600;
+    font-size: 16px;
+    border-style: none;
     max-width: 200px;
     width: 100%;
+    a{
+        color: black;
+    }
 }
-.alovservishead{
+
+.alovservishead {
     font-size: 1.3rem;
     color: white;
 }
-.alovservistext{
+
+.alovservistext {
     font-size: 5rem;
     color: white;
 }
 
-.section-home-top-btn{
+.section-home-top-btn {
     max-width: 500px;
     width: 100%;
     display: flex;
     gap: 1rem;
-    button{
+
+    button {
         padding: 1rem;
-         
+
     }
-   
-} 
-.home-aboutus-img{
+
+}
+
+.home-aboutus-img {
     max-width: 500px;
 }
-.home-card{
-    max-width: 320px;
+
+.home-card {
+    max-width: 350px;
     width: 100%;
+    text-align: center;
     padding: 50px;
     display: flex;
     flex-direction: column;
     gap: 30px;
-    background-color: rgb(238,249,255);
+    background-color: rgb(238, 249, 255);
 }
-.home-cards{
+
+.home-cards {
     display: grid;
-    padding: 60px;
     gap: 50px;
-    place-content: center;
-    place-items: center;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+}
+@media only screen and (max-width: 991px) {
+    .home-cards {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+    }
+  }
+  @media only screen and (max-width: 991px) {
+    .home-cards {
+        grid-template-columns: 1fr ;
+    }
+  }
+  .section-home-about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .home-about-top{
+    font-size: 20px;
+    font-weight: 800;
+    color: #06A3DA;
+  }
+  .home-about-head{
+    font-size: 40px;
+    font-weight: 800;
+    color: #000000;
+  }
+  .section-home-about{
+    padding: 50px;
+      display: grid;
+  place-content: center;
+  place-items: center;
+  grid-template-columns: 1fr 1fr;
+  }
+.home-services-general{
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+.services-items-opinion{
+    display: flex;
+    gap: 100px;
+    p{
+        font-weight: 600;
+        font-size: 20px;
+    }
+}
+.home-card-head{
+    font-size: 24px;
+    font-weight: 700;
+}
+.home-card-text{
+    font-size: 17px;
+    font-weight: 500;
+    color: rgb(97, 97, 97);
+}
+.home-card-tel-head{
+    font-size: 24px;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+}
+
+.home-card-tel{
+    max-width: 350px;
+    width: 100%;
+    text-align: center;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    background-color:#06A3DA;
+}
+.services-staff{
+    max-width: 500px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 50px;
 }
