--- a/src/components/ContactUsForm/index.scss
+++ b/src/components/ContactUsForm/index.scss
@@ -87,8 +87,20 @@
     justify-content: center;
 }
 .section-contactus-text{
-  font-size: 3.5rem;
+  font-size: 3.6rem;
   font-weight: bold;
   color: white;
   margin-top: 90px;
+  }
+
+  @media only screen and (max-width: 991px) {
+    .section-contactus-text{
+      font-size: 3rem;
+      }
+  }
+
+  @media only screen and (max-width: 768px) {
+    .section-contactus-text{
+      font-size: 2.7rem;
+      }
   }
