--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -99,9 +99,12 @@ a:hover{
 }
 .footer-logo-back{
     max-width: 70px;
-    padding:7px 10px;
+    padding: 10px;
     background-color: rgb(6,163,218);
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .footer-logo{
     display: flex;
