--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,197 +1,188 @@
 .footer-bottom {
-    width: 100%;
-    padding: 20px;
-    gap: 5px;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(6, 20, 41);
-    display: flex;
+  width: 100%;
+  padding: 20px;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(6, 20, 41);
+  display: flex;
 
-    p {
+  p {
 
-        color: white;
+    color: white;
 
-    }
+  }
 
-    a {
-        text-decoration: underline;
-        color: white;
-    }
+  a {
+    text-decoration: underline;
+    color: white;
+  }
 }
 
 .footer-top {
-    display: flex;
-    justify-content: space-between;
-    gap: 50px;
-    padding:0 20px;
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+  padding: 0 20px;
+  background-color: rgb(9, 30, 62);
 }
 
 .footer {
-    background-color: rgb(9, 30, 62);
+  background-color: rgb(9, 30, 62);
 }
 
 .footer-col-3 {
-    max-width: 250px;
+  max-width: 250px;
   width: 100%;
+  padding: 20px 0 40px;
+  display: flex;
+  gap: 25px;
 
-    display: flex;
-    gap: 25px;
+  a {
+    color: white;
+  }
 
-    a {
-        color: white;
-    }
+  a:hover {
+    color: rgb(226, 226, 226);
+  }
 
-    a:hover {
-        color: rgb(226, 226, 226);
-    }
+  flex-direction: column;
 
-    flex-direction: column;
-
-    p {
-        color: white;
-    }
+  p {
+    color: white;
+  }
 }
 
 .footer-col-2 {
-    display: flex;
-    max-width: 250px;
+  padding: 20px 0 0;
+  display: flex;
+  max-width: 250px;
 
-    width: 100%;
-    gap: 25px;
-    flex-direction: column;
+  width: 100%;
+  gap: 25px;
+  flex-direction: column;
 
-    a {
-        color: white;
-    }
+  a {
+    color: white;
+  }
 
-    p {
-        color: white;
-    }
+  p {
+    color: white;
+  }
 
 }
 
 .footer-col-2-items {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 
-    i {
-        color: rgb(6, 163, 218);
-    }
+  i {
+    color: rgb(6, 163, 218);
+  }
 
 }
 
 .footer-items {
-    display: flex;
-    flex-direction: column;
-    gap: 7px;
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
 }
 
 .footer-col-1 {
-    max-width: 350px;
-    width: 100%;
-    background-color: rgb(6, 163, 218);
-    padding: 45px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    gap: 20px;
+  max-width: 350px;
+  width: 100%;
+  background-color: rgb(6, 163, 218);
+  padding: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  gap: 20px;
 
-    p {
-        color: white;
-    }
+  p {
+    color: white;
+  }
 
-    a {
-        color: white;
-    }
+  a {
+    color: white;
+  }
 
-    a:hover {
-        color: rgb(226, 226, 226);
-    }
+  a:hover {
+    color: rgb(226, 226, 226);
+  }
 }
 
 .footer-heads {
-    font-size: 30px;
-    font-weight: 700;
+  font-size: 30px;
+  font-weight: 700;
 }
 
 .footer-col-2-contact-items {
-    display: flex;
-    gap: 7px;
+  display: flex;
+  gap: 7px;
 
-    i {
-        color: rgb(6, 163, 218);
+  i {
+    color: rgb(6, 163, 218);
 
-    }
+  }
 }
 
 .footer-logo-back {
-    max-width: 70px;
-<<<<<<< HEAD
-    padding: 10px;
-    background-color: rgb(6,163,218);
-=======
-    padding: 7px 10px;
-    background-color: rgb(6, 163, 218);
->>>>>>> cbd51091cc444192f79d1542e0bd2977f747e771
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  max-width: 70px;
+  padding: 10px;
+  background-color: rgb(6, 163, 218);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer-logo {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 .footer-bottom-number-head {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 .footer-bottom-number {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 .footer-col2-col3 {
-    margin-top: 40px;
-    max-width: 700px;
-    padding:20px 0;
-    width: 100%;
-    gap: 50px;
+  margin-top: 40px;
+  max-width: 700px;
+  padding: 20px 0;
+  width: 100%;
+  gap: 50px;
+}
+
+.footer-col2-col3 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 @media only screen and (max-width: 991px) {
-    .navbar-general {
-        display: none;
-    }
-}
-
-.footer-col2-col3 {
+  .footer-col2-col3 {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-
-@media only screen and (max-width: 991px) {
-    .footer-col2-col3 {
-        display: grid;
-        place-items: center;
-        place-content: center;
-        grid-template-columns: 1fr;
-    }
+    place-items: center;
+    place-content: center;
+    grid-template-columns: 1fr;
+  }
 }
 
 
 @media only screen and (max-width: 768px) {
-    .footer-top {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        gap: 50px;
-        background-color: rgb(9, 30, 62);
-        padding: 0 40px;
-    }
+  .footer-top {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    background-color: rgb(9, 30, 62);
+    padding: 0 40px;
+  }
 }
